* 2007-10-31 - ben.pahne@open-xchange.com

 - Bugfix #9996: Fixed replacing if special characters when converting
   plain text to html
 - Bugfix #9998: Catching runtime exception when converting TNEF read
   receipt or TNEF contact to common multipart object

* 2007-10-29 - ben.pahne@open-xchange.com

 - Fixed Bug 9975: Some connections didn't get closed during an error 
 
* 2007-10-29 - marcus.klein@open-xchange.com

 - Bugfix #9869: Set default upload quota to infinity.
 - Bugfix #9826: Properly set charset in Content-Type for configuration jump.

* 2007-10-29 - thorben.betten@open-xchange.com

 - Bugfix #9957: Fixed error message on exceeded quota when placing a copy
   into sent folder during message transport
 - Looking for QUOTA resource 'STORAGE' and logging other unsupported QUOTA
   resources
 - Updating message cache when selected mail is marked as seen

* 2007-10-26 - thorben.betten@open-xchange.com

 - Bugfix #9980: Proper check for table 'version'
 - Allowing an alternative way of specifying HTML inline images
 - Bugfix #9981: Checking for empty status message in HTTP response

* 2007-10-25 - thorben.betten@open-xchange.com

 - Bugfix #9899: Reconstructing item handlers if order of fetch items
   changes during processing of FETCH response
 - Bugfix #9939: Just sending END_RESPONSE package on ServletException to
   keep the socket alive

* 2007-10-24 - thorben.betten@open-xchange.com

 - Mail transport's dataobjects made more abstract

* 2007-10-24 - marcus.klein@open-xchange.com

 - Bugfix #9807: Removed throw of ServletException on a not catched Exception.

* 2007-10-23 - thorben.betten@open-xchange.com

 - Bugfix #9914: Providing a charset in new String() constructor

* 2007-10-23 - francisco.laguna@open-xchange.com

 - Bugfix #9865: Differentiate resources and users by trying to load them.

* 2007-10-22 - francisco.laguna@open-xchange.com

 - Bugfix #9865: Less valiant logging for Notifications.

* 2007-10-22 - thorben.betten@open-xchange.com
